# pyproject.toml
[tool.poetry]
name = "gen_scl_nat_env"
version = "0.1.0"
description = ""
authors = ["SCL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.12.7"
cffi = "1.14.6"
chardet = "4.0.0"
click = "8.1.3"
cymem = "2.0.7"
filelock = "3.9.0"
idna = "3.4"
joblib = "1.2.0"
multidict = "5.2.0"
numpy = "1.24.1"
packaging = "23.0"
pathy = "0.10.1"
preshed = "3.0.8"
pydantic = "1.10.4"
pytorch-lightning = "1.8.6"
pyyaml = "6.0"
regex = "2022.10.31"
requests = "2.28.2"
sentencepiece = "0.1.97"
smart-open = "6.3.0"
spacy = "3.4.4"
tensorboardx = "2.5.1"
thinc = "8.1.7"
tokenizers = "0.13.2"
torchmetrics = "0.11.0"
tqdm = "4.64.1"
transformers = "4.25.1"
typer = "0.7.0"
typing-extensions = "4.4.0"
urllib3 = "1.26.14"
wasabi = "0.10.1"
yarl = "1.8.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
